--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                Cuneo (Cn)
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +39 3280046162
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                marco.masoero@itiscuneo.eu
               </span>
             </a>
           </div>
@@ -387,10 +387,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Martin Anderson
+                Simone Arrigoni
               </h5>
               <h6 class="">
-                supervisor
+                Team Manager
               </h6>
             </div>
           </div>
@@ -402,10 +402,25 @@
             </div>
             <div class="detail-box">
               <h5>
-                Denny Butler
+                Karol Bruno
               </h5>
               <h6 class="">
-                supervisor
+                C# Programmer
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 mx-auto">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/t2.jpg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Marco Masoero
+              </h5>
+              <h6 class="">
+                Web Developer
               </h6>
             </div>
           </div>
@@ -417,10 +432,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Nathan Mcpherson
+                Leonardo Pollicino
               </h5>
               <h6 class="">
-                supervisor
+                Hololens Programmer
               </h6>
             </div>
           </div>
@@ -509,10 +524,10 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      Jone Mark
+                      Simone Arrigoni
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+                      Group leader and manager, he had the most impact on the project because he tried his hardest to get to know as much as possible about Microsoft Hololens 2 and, thanks to Leonardo Pollicino, he managed to transfer the Unity projects into Hololens 2
                     </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
@@ -531,10 +546,10 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      Jone Mark
+                      Karol Bruno
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+                      His role in the team was converting all of the ideas into code, assigning the scripts to the GameObjects, and doing research on the coding language C#. Inevitably, he has also looked into how Unity works and gave a contribute to the project. Furthermore, he wrote the project's presentation using Canva's tools with Marco
                     </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
@@ -553,11 +568,33 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      Jone Mark
+                      Marco Masoero
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+                      He has contributed in the C# scripting and especially in the process of brainstorming, because coming up with doable ideas is absolutely crucial, considering the one and a half week deadline. He also wrote the project's presentation with Karol Bruno using Canva's presentation editor
                     </p>
+                    <span>
+                      <i class="fa fa-quote-left" aria-hidden="true"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-7 col-md-9 mx-auto">
+                <div class="client_container ">
+                  <div class="img-box">
+                    <img src="images/client.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      Leonardo Pollicino
+                    </h5>
+                    <p>
+                      Leonardo Pollicino had the most impact regarding the implementation of Unity in Hololens 2, he has also looked into the C# programming language to help Karol Bruno and Marco Masoero scripting the GameObjects.
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -602,13 +639,13 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Cuneo (Cn)
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  +01 1234567890
+                  +39 3280046162
                 </span>
               </a>
             </div>
