--- a/service.html
+++ b/service.html
@@ -46,19 +46,19 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                Cuneo (Cn)
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +39 3280046162
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                marco.masoero@itiscuneo.eu
               </span>
             </a>
           </div>
@@ -133,7 +133,7 @@
     <div class="container">
       <div class="heading_container heading_center ">
         <h2 class="">
-          Our Services
+          Our Project
         </h2>
         <p class="col-lg-8 px-0">
           If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
@@ -266,13 +266,13 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Cuneo (Cn)
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  +01 1234567890
+                  +39 3280046162
                 </span>
               </a>
             </div>
@@ -399,7 +399,7 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script src="https://www.google.it/maps/place/Istituto+Tecnico+Industriale+Statale+%22Mario+Delpozzo%22/@44.3812212,7.5319183,15z/data=!4m6!3m5!1s0x12cd6eaaea810aa5:0xb454a5bbe081b171!8m2!3d44.3782869!4d7.5275737!16s%2Fg%2F1tf8k35r?entry=ttu"></script>
   <!-- End Google Map -->
 </body>
 
