--- a/team.html
+++ b/team.html
@@ -46,19 +46,19 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                Cuneo (Cn)
               </span>
             </a>
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +3903280046162
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                marco.masoero@itiscuneo.eu
               </span>
             </a>
           </div>
@@ -147,10 +147,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Martin Anderson
+                Simone Arrigoni
               </h5>
               <h6 class="">
-                supervisor
+                Team Manager
               </h6>
             </div>
           </div>
@@ -162,10 +162,25 @@
             </div>
             <div class="detail-box">
               <h5>
-                Denny Butler
+                Karol Bruno
               </h5>
               <h6 class="">
-                supervisor
+                C# Programmer
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 mx-auto">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/t2.jpg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Marco Masoero
+              </h5>
+              <h6 class="">
+                Web Developer
               </h6>
             </div>
           </div>
@@ -177,10 +192,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Nathan Mcpherson
+                Leonardo Pollicino
               </h5>
               <h6 class="">
-                supervisor
+                Hololens Programmer
               </h6>
             </div>
           </div>
@@ -206,13 +221,13 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Cuneo (Cn)
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  +01 1234567890
+                  +39 3280046162
                 </span>
               </a>
             </div>
@@ -339,7 +354,7 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script src="https://www.google.it/maps/place/Istituto+Tecnico+Industriale+Statale+%22Mario+Delpozzo%22/@44.3812212,7.5319183,15z/data=!4m6!3m5!1s0x12cd6eaaea810aa5:0xb454a5bbe081b171!8m2!3d44.3782869!4d7.5275737!16s%2Fg%2F1tf8k35r?entry=ttu"></script>
   <!-- End Google Map -->
 </body>
 
