--- a/about.html
+++ b/about.html
@@ -173,13 +173,13 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Cuneo (Cn)
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  +01 1234567890
+                  +39 3280046162
                 </span>
               </a>
             </div>
