--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t2.jpg" alt="">
+              <img src="images/t3.jpg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -428,7 +428,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t3.jpg" alt="">
+              <img src="images/t4.jpg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -520,7 +520,7 @@
               <div class="col-lg-7 col-md-9 mx-auto">
                 <div class="client_container ">
                   <div class="img-box">
-                    <img src="images/client.jpg" alt="">
+                    <img src="images/client1.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -542,7 +542,7 @@
               <div class="col-lg-7 col-md-9 mx-auto">
                 <div class="client_container ">
                   <div class="img-box">
-                    <img src="images/client.jpg" alt="">
+                    <img src="images/client2.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -564,7 +564,7 @@
               <div class="col-lg-7 col-md-9 mx-auto">
                 <div class="client_container ">
                   <div class="img-box">
-                    <img src="images/client.jpg" alt="">
+                    <img src="images/client3.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -587,7 +587,7 @@
               <div class="col-lg-7 col-md-9 mx-auto">
                 <div class="client_container ">
                   <div class="img-box">
-                    <img src="images/client.jpg" alt="">
+                    <img src="images/client4.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
