--- a/about.html
+++ b/about.html
@@ -140,11 +140,13 @@
               </h2>
             </div>
             <p class="detail_p_mt">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+              We are a group of Italian youngsters hailing from Cuneo, united by the same passion: technology. We embarked on a mission to offer individuals affected by ALS the opportunity to begin a rehabilitation journey, having fun and engaging with cutting-edge tools such as the Hololens 2, an augmented reality headset. We believe we have successfully achieved our goal and are eager to take on new challenges. We are the "HOLOTRAINERS".
             </p>
+            <!--
             <a href="about.html" class="">
               Read More
             </a>
+            ->
           </div>
         </div>
         <div class="col-md-6 px-0">
