--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand " href="index.html"> Finter </a>
+            <a class="navbar-brand " href="index.html"> Holotrainers </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -165,7 +165,7 @@
         <div class="row">
           <div class="col-md-3 ">
             <a class="navbar-brand" href="index.html">
-              Finter
+              Holotrainers
             </a>
           </div>
           <div class="col-md-5 ">
@@ -210,9 +210,7 @@
                 Company
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                ITIS Mario Delpozzo
               </p>
             </div>
           </div>
@@ -235,9 +233,7 @@
                 Services
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                ALS Rehabilitation
               </p>
             </div>
           </div>
