--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/fevicon.png" type="image/x-icon">
-  <title>Finter</title>
+  <title>Holotrainers</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -81,7 +81,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand " href="index.html"> Finter </a>
+            <a class="navbar-brand " href="index.html"> Holotrainers </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -135,10 +135,10 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      Welding Services
+                      ALS Rehabilitation
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet autem in
+                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -157,10 +157,10 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      Welding Services
+                      ALS Rehabilitation
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet autem in
+                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -179,10 +179,10 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      Welding Services
+                      ALS Rehabilitation
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet autem in
+                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -220,7 +220,7 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+          By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
         </p>
       </div>
       <div class="service_container">
@@ -233,39 +233,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Home Welding
-                  </h5>
-                  <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
-                    that it has a more-or-less normal
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s4.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Machine Welding
-                  </h5>
-                  <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
-                    that it has a more-or-less normal
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s6.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Car Welding
+                    Improve Cognitive Abilities
                   </h5>
                   <p>
                     when looking at its layout. The point of using Lorem Ipsum is
@@ -281,27 +249,10 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Home Welding
+                    ALS Rehabilitation
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
-                    that it has a more-or-less normal
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s4.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Machine Welding
-                  </h5>
-                  <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
-                    that it has a more-or-less normal
+                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
                   </p>
                 </div>
               </div>
@@ -313,11 +264,10 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Car Welding
+                    Having fun while learning
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
-                    that it has a more-or-less normal
+                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
                   </p>
                 </div>
               </div>
@@ -348,7 +298,7 @@
               </h2>
             </div>
             <p class="detail_p_mt">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+              We are a group of Italian youngsters hailing from Cuneo, united by the same passion: technology. We embarked on a mission to offer individuals affected by ALS the opportunity to begin a rehabilitation journey, having fun and engaging with cutting-edge tools such as the Hololens 2, an augmented reality headset. We believe we have successfully achieved our goal and are eager to take on new challenges. We are the "HOLOTRAINERS".
             </p>
             <a href="about.html" class="">
               Read More
@@ -375,8 +325,7 @@
           Our Team
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
-          iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
+          We are a group of Italian youngsters hailing from Cuneo, united by the same passion: technology. We embarked on a mission to offer individuals affected by ALS the opportunity to begin a rehabilitation journey, having fun and engaging with cutting-edge tools such as the Hololens 2, an augmented reality headset. We believe we have successfully achieved our goal and are eager to take on new challenges. We are the "HOLOTRAINERS".
         </p>
       </div>
       <div class="row">
@@ -631,7 +580,7 @@
         <div class="row">
           <div class="col-md-3 ">
             <a class="navbar-brand" href="index.html">
-              Finter
+              Holotrainers
             </a>
           </div>
           <div class="col-md-5 ">
@@ -676,9 +625,7 @@
                 Company
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                ITIS Mario Delpozzo
               </p>
             </div>
           </div>
@@ -701,9 +648,7 @@
                 Services
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                ALS Rehabilitation
               </p>
             </div>
           </div>
