--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     <div class="container ">
       <div class="heading_container heading_center">
         <h2>
-          Testimonial
+          The Team
         </h2>
         <hr>
       </div>
