--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       ALS Rehabilitation
                     </h1>
                     <p>
-                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
+                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -149,7 +149,7 @@
                       ALS Rehabilitation
                     </h1>
                     <p>
-                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
+                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -171,7 +171,7 @@
                       ALS Rehabilitation
                     </h1>
                     <p>
-                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
+                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -209,7 +209,7 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-          By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
+          By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
         </p>
       </div>
       <div class="service_container">
@@ -241,7 +241,7 @@
                     ALS Rehabilitation
                   </h5>
                   <p>
-                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
+                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
                   </p>
                 </div>
               </div>
@@ -256,7 +256,7 @@
                     Having fun while learning
                   </h5>
                   <p>
-                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journay with them.
+                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
                   </p>
                 </div>
               </div>
@@ -655,11 +655,6 @@
                 <li>
                   <a href="about.html">
                     About
-                  </a>
-                </li>
-                <li>
-                  <a href="service.html">
-                    Services
                   </a>
                 </li>
                 <li>
