--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/fevicon.png" type="image/x-icon">
-  <title>Finter</title>
+  <title>Holotrainers</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -81,7 +81,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand " href="index.html"> Finter </a>
+            <a class="navbar-brand " href="index.html"> Holotrainers </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -95,22 +95,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="team.html"> Team <span class="sr-only">(current)</span> </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                    <span>
-                      Login
-                    </span>
-                  </a>
                 </li>
                 <form class="form-inline justify-content-center">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -213,7 +202,7 @@
         <div class="row">
           <div class="col-md-3 ">
             <a class="navbar-brand" href="index.html">
-              Finter
+              Holotrainers
             </a>
           </div>
           <div class="col-md-5 ">
@@ -303,11 +292,6 @@
                 <li>
                   <a href="about.html">
                     About
-                  </a>
-                </li>
-                <li>
-                  <a href="service.html">
-                    Services
                   </a>
                 </li>
                 <li>
