--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s1.png" alt="" />
+                  <img src="images/s1.jpeg" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -234,7 +234,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s2.png" alt="" />
+                  <img src="images/s2.jpg" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -249,7 +249,7 @@
             <div class="item">
               <div class="box ">
                 <div class="img-box">
-                  <img src="images/s3.png" alt="" />
+                  <img src="images/s3.jpg" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
