--- a/team.html
+++ b/team.html
@@ -247,9 +247,7 @@
                 Company
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                ITIS Mario Delpozzo
               </p>
             </div>
           </div>
@@ -272,9 +270,7 @@
                 Services
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                ALS Rehabilitation
               </p>
             </div>
           </div>
