--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
                     Improve Cognitive Abilities
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
-                    that it has a more-or-less normal
+                    By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
                   </p>
                 </div>
               </div>
