--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      ALS Rehabilitation
+                      Video
                     </h1>
                     <p>
-                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
+                      <iframe width="560" height="315" src="https://youtu.be/_vb9uKh1L3o" frameborder="0" allowfullscreen></iframe>
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -168,10 +168,10 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      ALS Rehabilitation
+                      Video
                     </h1>
                     <p>
-                      By using the Hololens 2 we created a special tool for people affected by ALS and we are able to start a rehabilitation journey with them.
+                      <iframe width="560" height="315" src="https://youtu.be/8ITSHjMXKj8" frameborder="0" allowfullscreen></iframe>
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
