--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      Video
+                      Infinito Game
                     </h1>
                     <p>
-                      <iframe width="560" height="315" src="https://youtu.be/_vb9uKh1L3o" frameborder="0" allowfullscreen></iframe>
+                      <video width="640" height="360" controls>
+                        <source src="infinito.mp4" type="video/mp4">
+                      </video>
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -168,10 +170,36 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      Video
+                      Rover Game
                     </h1>
                     <p>
-                      <iframe width="560" height="315" src="https://youtu.be/8ITSHjMXKj8" frameborder="0" allowfullscreen></iframe>
+                      <video width="640" height="360" controls>
+                        <source src="rover.mp4" type="video/mp4">
+                      </video>
+                    </p>
+                    <div class="btn-box">
+                      <a href="" class="btn1">
+                        Contact Us
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container ">
+              <div class="row">
+                <div class="col-lg-10 col-md-11 mx-auto">
+                  <div class="detail-box">
+                    <h1>
+                      We Provide <br>
+                      Random Game
+                    </h1>
+                    <p>
+                      <video width="640" height="360" controls>
+                        <source src="random.mp4" type="video/mp4">
+                      </video>
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
